@@ -134,12 +134,12 @@ $table->data[3][0] .= '</span>';
 $banners = list_files ('images/group_banners/', 'png', 0, true);
 $table->data[3][1] = print_select ($banners, "banner", $banner, '', 'None', '', true, false, false, __('Banner'));
 
-$table->data[4][0] = print_input_text ('soft_limit', $soft_limit, '', 10, 0, true , __('Tickets Soft limit'));
+$table->data[4][0] = print_input_text ('soft_limit', $soft_limit, '', 10, 0, true , __('Tickets Soft limit')).print_help_tip (__("If it's a standard user it shows the maximum nº of tickets for this group that one user can have opened at the same time. If it's a external user it shows the maximum nº of tickets for this group and user that one user can have opened at the same time"), true);
 
 
 $table->data[4][1] = print_checkbox ('enforce_soft_limit', 1, $enforce_soft_limit, true, __('Enforce soft limit'));
 
-$table->data[5][0] = print_input_text ('hard_limit', $hard_limit, '', 10, 0, true , __('Tickets Hard limit'));
+$table->data[5][0] = print_input_text ('hard_limit', $hard_limit, '', 10, 0, true , __('Tickets Hard limit')).print_help_tip (__("If it's a standard user it shows the nº of maximum tickets for this group, that one user could have in total (open or closed). If it's a external user it shows the nº of maximum tickets for user, for this group, that one user could have in total (open or closed). When this limit is exceeded, the user will receive a notification in the screen when he try to create a ticket, so he won't be able to create any more."), true);
 
 $slas_aux = get_db_all_rows_sql("SELECT id, name FROM tsla ORDER BY name");
 
