@@ -1,3 +1,11 @@
+2015-06-24  Vanessa Gil <vanessa.gil@artica.es> 
+	
+	* include/functions_incidents.php: Improve
+	perfomance.
+
+	* godmode/grupos/configurar_grupo.php: Added help
+	tip.
+
 2015-06-23  Vanessa Gil <vanessa.gil@artica.es> 
 	
 	* operation/incidents/incident_detail.php: Fixed
